tests/derive_box/fails/unsized_type_self_receiver.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> tests/derive_box/fails/unsized_type_self_receiver.rs:10:18
   |
10 |     fn into_utf8(self) -> Vec<u8> {
   |                  ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
10 |     fn into_utf8(&self) -> Vec<u8> {
   |                  +
